--- a/style.css
+++ b/style.css
@@ -15,5 +15,9 @@ div {
 }
 div h1{
     letter-spacing: 3px;
+    font-size: 45px;
     text-transform: uppercase;
+}
+div input{
+    font-size: 20px;
 }
